linked the pages together with an index file

--- a/templates/login.html
+++ b/templates/login.html
@@ -4,7 +4,7 @@
       <link rel="stylesheet" href="{{ url_for('static', filename='css/login.css') }}">
    </head>
    <body>
-      <form action = "http://192.168.1.128:5000/login_request" method = "GET">
+      <form action = "/login_request" method = "GET">
          <p>Enter Name:</p>
          <p><input type = "text" name = "nm" /></p>
          <p><input type = "submit" value = "submit" /></p>
