added random meme page, also placed submitted memes in static

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
    </head>
    <body>
     
-    <h1>Du har nu 3 valg:</h1>
+    <h1>Du har nu 4 valg:</h1>
 
     <h1>Tjek om du er sej</h1>
     <form action = "/erDuSej_request" method = "GET">
@@ -22,5 +22,11 @@
     <form action="/submit">
         <input type ="submit">
     </form>
+
+    <h1>Se random meme</h1>
+    <form action="/randomMeme">
+        <input type ="submit">
+    </form>
+
     </body>
 </html>
