--- a/templates/memeform.html
+++ b/templates/memeform.html
@@ -1,7 +1,7 @@
 <html>
    <body>
         <h1>upload din dank meme</h1>
-        <form action = "http://192.168.1.128:5000/upload" method = "POST" 
+        <form action = "/upload" method = "POST" 
          enctype = "multipart/form-data">
          <input type = "file" name = "visualFile" />
          <input type = "file" name = "soundFile" />
