cleaned up deathRolling code a little

--- a/templates/deathRolling.html
+++ b/templates/deathRolling.html
@@ -8,7 +8,7 @@
     <body>
         <input type = "number" id="number">
         <div class="flexbox">
-            <audio id="bass" src="{{ url_for('static',filename='bass2.mp3') }}">
+            <audio id="bass" preload="auto" src="{{ url_for('static',filename='bass2.mp3') }}">
                 you done fucked up
             </audio>
                 
