--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
    </head>
    <body>
     
-    <h1>Du har nu 4 valg:</h1>
+    <h1>Du har nu 5 valg:</h1>
 
     <h1>Tjek om du er sej</h1>
     <form action = "/erDuSej_request" method = "GET">
@@ -17,6 +17,12 @@
     <form action="/login">
         <input type ="submit">
     </form>
+
+    <h1>Deathroll</h1>
+    <form action="/deathRoll">
+        <input type ="submit">
+    </form> 
+
 
     <h1>Upload memes</h1>
     <form action="/submit">
