--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,7 +5,7 @@
 .App-logo {
   height: 40vmin;
   width: 40vmin;
-  border-radius: 1000px;
+  border-radius: 50%;
   pointer-events: none;
 }
 
@@ -15,7 +15,79 @@
   }
 }
 
-.App-header {
+.User-page {
+  width: 100%;
+  height: 100%;
+}
+
+
+.User-box-container {
+  padding-left: 10vh;
+}
+
+.User-box {
+  padding: 2vh;
+  width: 40vw;
+  height: 40vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  background: #121517;
+  border: 0.2vh solid #000000;
+  border-radius: 1.5vh;
+}
+
+.User-picture {
+  height: 30vh;
+  width: 30vh;
+  border-radius: 50%;
+}
+
+
+.User-info {
+  list-style-type: none;
+  display: flex;
+  text-align: left; 
+  justify-content: space-around;
+  flex-direction: column;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  font-size: calc(6px + 2vmin);
+}
+
+.User-field {
+  color: white;
+  padding: 6vh;
+}
+
+.User-field-name {
+  font-family: Cantarell;
+  font-style: normal;
+  font-weight: 500;
+
+  color: #ADADAD;
+}
+
+.User-field-value {
+  font-family: Cantarell;
+  font-style: normal;
+  font-weight: 500;
+
+  color: #FFFFFF;
+}
+
+.App-header{
+  position: absolute;
+  width: 100vw;
+  height: 10vh;
+
+  background: #53758D;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+.App-body {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -23,7 +95,7 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #424C55;
 }
 
 .App-link {
