--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -3,16 +3,12 @@
 }
 
 .App-logo {
-  height: 40vmin;
-  width: 40vmin;
-  border-radius: 50%;
+  height: 40px;
+  width: 120px;
+  padding-left: 1vmin;
+  padding-right: 1vmin;
   pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 10s linear;
-  }
 }
 
 .User-page {
@@ -44,6 +40,15 @@
   border-radius: 50%;
 }
 
+.User-picture-navbar{
+  height: 40px;
+  width: 40px;
+  border-radius: 50%;
+  
+  /* Ugly hack to make the picture go up when in a navbar */
+  position: relative;
+  top: -11px;
+}
 
 .User-info {
   list-style-type: none;
@@ -76,15 +81,6 @@
   font-weight: 500;
 
   color: #FFFFFF;
-}
-
-.App-header{
-  position: absolute;
-  width: 100vw;
-  height: 10vh;
-
-  background: #53758D;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .App-body {
