refactored functional components to the more verbose syntax, refactored interfaces to types and made a custom hook for handeling user state

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -89,6 +89,19 @@
   color: #FFFFFF;
 }
 
+.Login-form{
+  font-size: calc(4px + 2vmin);
+  text-align: left; 
+}
+
+.Signup-link{
+  text-decoration: none;
+}
+
+.Signup-link:hover{
+  text-decoration: none;
+}
+
 .App-body {
   background-color: #282c34;
   min-height: 100vh;
