more light refactoring

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -101,6 +101,8 @@
 }
 
 .Meme-preview-container {
+  height: 400px;
+  width: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
