made a meme stack so that you can go back and forth between new and old memes

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -117,6 +117,16 @@
   justify-content: center;
 }
 
+.Meme-button-container {
+  display: flex;
+  flex-direction: row;
+  margin: 0 -5px;
+}
+
+.Meme-button {
+  margin: 0 5px;
+}
+
 .Meme-canvas-container {
   height: 400px;
   width: 400px;
