--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -147,6 +147,74 @@
   margin: 0 5px;
 }
 
+.meme-displayer-container {
+  display: inline-block;
+}
+
+.vote-component-container {
+  display: flex;
+  position: absolute;
+  width: 300px;
+  flex-direction: column;
+  justify-content: left;
+}
+
+.vote-container {
+  display: inline-block;
+}
+
+.random-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.vote-component{
+  display: flex;
+  justify-content: left;
+  align-items: center;
+}
+
+.vote-flex-container {
+  height: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+.vote {
+  background-color: transparent;
+  display: flex;
+  justify-content: space-around;
+}
+
+.upvote {
+  transform: rotate(270deg);
+}
+
+.normal-vote{
+  width: 50px;
+  height: auto;
+}
+
+.small-vote{
+  width: 25px;
+  height: auto;
+}
+
+.upvoted {
+  transform: rotate(270deg);
+  fill: red;
+}
+
+.downvote {
+  transform: rotate(90deg);
+}
+
+.downvoted {
+  transform: rotate(90deg);
+  fill: blue;
+}
+
 
 .Meme-gif-container {
   position: relative;
@@ -172,7 +240,7 @@
 
 .Meme-canvas-container {
   height: 400px;
-  width: 400px;
+  width: 350px;
   display: flex;
   align-items: center;
   flex-direction: column;
