added support for configuring chances of meme components, and made the user config into a cookie that is kept in sync with the currently selected mode and chances

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -161,6 +161,16 @@
   justify-content: left;
 }
 
+.config-component-container {
+  display: flex;
+  position: absolute;
+  top: 20%;
+  right:15%;
+  width: 300px;
+  flex-direction: column;
+  justify-content: right;
+}
+
 .vote-container {
   display: inline-block;
 }
